# NetworkManagerCpp

./: CMakeLists.txt  README.md
examples/: addConnection.cpp  createAccessPoint.cpp  listAccessPoints.cpp
include/libnm/: AccessPoint.h  ActiveConnection.h  Client.h  Connection.h  Device.h  DeviceWifi.h  MainLoop.h  RemoteConnection.h  Setting.h  SettingIP4Config.h  SettingIP6Config.h  SettingIPConfig.h  SettingWireless.h  SettingWirelessSecurity.h  SimpleConnection.h  version.h
mock/: README.md
mock/include/libnm/: AccessPoint.h  ActiveConnection.h  Client.h  Connection.h  Device.h  DeviceWifi.h  RemoteConnection.h  Setting.h  SettingWireless.h  SettingWirelessSecurity.h  SimpleConnection.h
mock/include/libnm/detail/: DevicePrivateMembers.h  SettingPrivateMembers.h
mock/src/: AccessPoint.cpp  ActiveConnection.cpp  Client.cpp  Connection.cpp  Device.cpp  DeviceWifi.cpp  RemoteConnection.cpp  Setting.cpp  SettingWireless.cpp  SettingWirelessSecurity.cpp  SimpleConnection.cpp
src/: AccessPoint.cpp  ActiveConnection.cpp  Client.cpp  Connection.cpp  Device.cpp  DeviceWifi.cpp  MainLoop.cpp  RemoteConnection.cpp  Setting.cpp  SettingIP4Config.cpp  SettingIP6Config.cpp  SettingIPConfig.cpp  SettingWireless.cpp  SettingWirelessSecurity.cpp  SimpleConnection.cpp  version.cpp.in
tests/include/libnmtests/: ConnectionTests.h  RemoteConnectionTests.h  testinputs.h
tests/src/: ConnectionTests.cpp  RemoteConnectionTests.cpp  test_Client.cpp  test_SettingIP4Config.cpp  test_SettingIP6Config.cpp  test_version.cpp  testinputs.cpp.in
